exercises/ex2-request_routing/identity_routing/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-tier-identity-routing
  namespace: app-tier
spec:
  hosts:
  - app-tier-svc.app-tier.svc.cluster.local
  http:
  - match:
    - headers:
        user:
          exact: ram
    route:
    - destination:
        host: app-tier-svc.app-tier.svc.cluster.local
        subset: v1
  - route:
    - destination:
        host: app-tier-svc.app-tier.svc.cluster.local
        subset: v2
